css/styles.css
* {box-sizing: border-box;}

/* Base-styles */
.bodyimg {
    font-size: 20px;
   font-family:Quicksand, Arial, Helvetica, sans-serif;
   background-image: linear-gradient(to bottom, #e2d1c3,#fdfcfb);
   color:black;
   line-height:1.5;
   letter-spacing :0.05rem;
   hyphens: auto; 
   overflow: hidden;
}

main {
    flex: 1;
}
nav ul li{
    font-size:1.5em;

    padding: 5px;
}
.nav-list li, #closing-nav li  {
    list-style:none;
}
a {
    text-decoration: none;
}
li a:hover {
    color: rgb(158, 49, 9);
   }

nav ul li, h1,h2,h3, .final-content p{
    text-transform: uppercase;
}

h1,h3 {
    font-family: 'Comfortaa', Arial, Helvetica, sans-serif;
    font-weight: 700;
}

/* main styles */

.header-nav, 
.nav-list,
 .intro-content,
 .main-content,
 .footer-content,
 .skills-list,
 .final-content,
 .contact-details,
 .main-port{
    display:flex;
    flex-direction:column;
    flex-wrap: wrap;
}

.header-nav {
    justify-content: center;
    align-items: center;    
}

header, .intro-content img {
    order:-1;
}
.nav-list{
    padding-left:20px;
}
.nav-list li {
    align-self: center;
}

.intro-content{
    justify-content: space-around;
} 

.intro-content,.contact-details p:last-child{
    padding-bottom:3rem;
}

.intro-content img {
   width:350px;
   border-radius:20%;
}

 .intro-content, .final-content{
  flex-direction: row;
}

#portfolio, #skills{
    display:flex;
    justify-content: space-around;

}


.main-content,.main-port, .footer-content,.skills-list{
  align-items: center;
    
}

.main-content p:last-child, .header-nav, .intro-content p{
   padding: 1rem 1.5rem;
  
}

.contact-details{
    justify-content: space-around;
}

.main-content p:last-child, .header-nav, .intro-content p, .contact-details p:last-child{
    margin-top:auto;
}

.main-content img {
    max-width:350px;
}

.footer-content {
   padding:1rem 2rem;
}

.footer-content ul {
  display: none;
}

.contact-details{
    max-width:300px;
}

.final-content {
  width:100%;
}
.final-content h4 {
   flex-grow:4;
}

.final-content{
    border-top: 1px grey dotted;
}


/* media querries */
@media screen and (min-width:768px) {
    .nav-list{
        margin-top:0;
        font-size:1rem;
    }

    .nav-list, .main-content{
        flex-direction: row;
    }
  
    #portfolio,#contact{
        font-size:1.5rem;
    }

    .intro-content{
        flex-wrap: nowrap;
    }

    .intro-content img {
        width:300px;
        order: 1;
        padding-right:1em;
        object-fit: contain;
    }

    .intro-content p {
       width:800px;
       font-size: 1.25rem;
    }

    .main-content, .final-content ul{
        display: flex;
    }
    .main-port{
        flex:1 250px;
    }

    .footer-content p {
        width:600px;
     
    }

    .final-content p {
        display:none;
    }
    
    .final-content ul{
        text-transform: uppercase;
    }

    .final-content li {
     padding:0.5rem;
     font-size:1rem;
    }
    

}

@media screen and (min-width:1024px) {
   .header-nav{
       flex-direction: row;
       justify-content: space-between;
   }

   .intro-content{
       justify-content: center;
   }
    
   .intro-content img{
       width:400px;
   }    
  
   .intro-content p {
    margin-top: 0;
    padding-top: 0.2rem;
    font-size: 1.5rem;
    width:450px;
   }


   .main-port img{
       width:300px;
   }

   .main-content{
       max-width:1000px;
       margin:auto;
   }

}

